--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         
         />
 <h1>Jake Gonzalez</h1>
+<center>
+<img src = "https://www.pinclipart.com/picdir/middle/553-5530869_black-hair-cartoon-guy-clipart.png" alt = "picture of me" width = 100px height="178px" title="Picture of Me"   />
+</center>
 
-<h2>Software Developer</h2>
+
+<h2>Software Developer </h2>
 
 
 <hr> 
@@ -25,7 +29,9 @@
 
 </style>
 
-<h4>My favorite thing about coding is how powerful it is.</h4>
+<h4>My <i>favorite</i> thing about coding is how powerful it is.</h4>
+
+<hr>
 
 
 <div> 
@@ -44,18 +50,31 @@ p1 {
 
 </style>
 </div>
-<h3>About Me</h3>
+<style type= "text/css">
+p {
+font-color: pink;
+}
+
+</style>
+<h3>About Me </h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quasi quo voluptates perferendis tenetur nulla nam nostrum sed ducimus odio impedit veniam sequi est, in aliquam quas! Quae, odit error?</p>
 
 <h3>My Projects</h3>
-<p>Coming Soon</p>
+<ul>
+<li>Project 1</li>
+<li>Project 2</li>
+<li>Project 3</li>
+
+</ul>
 
 
 <h3>Contact Me</h3>
 
     
-<p>jake.g29@outlook.com</p>
-<p>708-218-5911</p>
+<p><a href = "mailto: example@outlook.com">example@outlook.com</a><br>
+  <br>
+708-123-4567</p>
+
 
 
 
